# backup

Fil rouge master/ia_test/: generated_temperature_data_with_constraints.json  test.py
cours/Algorithmie/: CMakeCache.txt  CMakeLists.txt  Makefile  affichage.cpp  affichage.h  cmake_install.cmake  enveloppe.cpp  enveloppe.h  main  main.cpp  main.h  point.cpp  point.h  polygone.cpp  polygone.h  winbgi.cpp
cours/CarteCombinatoire/: CMakeLists.txt  affichage.cpp  affichage.h  carte.cpp  carte.h  colors.mtl  ile Saint Christophe.txt  main.cpp  main.h  point.cpp  point.h  triangulation.cpp  triangulation.h
cours/Harmony/: CMakeLists.txt  OriginalHS.cpp  OriginalHS.h
cours/OptimisationCombinatoire/: CMakeLists.txt  main.cpp
cours/template/: main.cpp
